[package]
name = "tokrust"
version = "0.0.1"
description = "A Rust library. Use it to receive live stream events such as comments and gifts in realtime from TikTok LIVE No credentials are required."
homepage = "https://github.com/withRHEN/tokrust"
repository = "https://github.com/withRHEN/tokrust"
keywords = ["api", "stream", "tiktok", "live", "events"]
license = "MIT"
edition = "2021"
authors = ["RHEN UG (haftungsbeschränkt) <developers@rhen.io>"]
readme = "README.md"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
reqwest = "0.12.2"
urlencoding = "2.1.3"
serde = "1.0.197"
serde_json = "1.0.115"
serde_derive = "1.0.196"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
bytes = "1.6.0"

protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
protobuf = { version = "3.3.0", features = ["bytes"] }

url = "2.5.0"
tungstenite = "0.23.0"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"

