[package]
name = "build-script"
version = "0.0.1"
license = "MIT"
edition = "2021"
authors = ["RHEN UG (haftungsbeschränkt) <developers@rhen.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettyplease = "0.2.16"
log = "0.4.20"
env_logger = "0.11.1"
quote = "1.0.35"
reqwest = "0.11.24"
urlencoding = "2.1.3"
serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
bytes = "1.5.0"

protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
protobuf = { version = "3.3.0", features = ["bytes"] }

url = "2.5.0"
tungstenite = "0.21.0"
proc-macro2 = "1.0.78"
syn = "2.0.48"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"